@@ -1,0 +1,13 @@
+If the back/forward cache is enabled, this test will crash instead of going to the next page that says PASS.
+
+It cannot be automated because DumpRenderTree doesn't support the back/forward cache.
+
+<script>
+if (window.layoutTestController)
+    layoutTestController.waitUntilDone();
+
+setTimeout('',1000);
+clearTimeout(0);
+clearTimeout(0);
+window.location = "data:text/html,This test shouldn't crash. PASS.<scr" + "ipt>if (window.layoutTestController) layoutTestController.notifyDone()</scr" + "ipt>";
+</script>
