@@ -1,3 +1,15 @@
+2007-10-28  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Mark.
+
+        - fixed REGRESSION(r27176): Reproducible crash while trying to order dinner makes bdash sad
+        http://bugs.webkit.org/show_bug.cgi?id=15731
+
+        * bindings/js/kjs_window.cpp:
+        (KJS::Window::installTimeout): Avoid putting in or accessing empty or deleted keys.
+        (KJS::Window::clearTimeout): ditto
+        * manual-tests/bad-clearTimeout-crash.html: Added. Automated test not possible.
+
 2007-10-28  Kevin Ollivier  <kevino@theolliviers.com>
 
         wx port defines for graphics and network layers.
